# Sherlock

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.scss  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: hotkeys.rs  main.rs
src/components/: SearchBar.tsx
src/scss/: App.scss  SearchBar.scss
